--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,81 @@ theme:
   palette:
     - scheme: default
 
+markdown_extensions:
+  - toc:
+      permalink: true
+      toc_depth: 3
+  - meta
+  - def_list
+  - attr_list
+  - md_in_html
+  - sane_lists
+  - admonition
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.tilde
+  - pymdownx.critic
+  - pymdownx.details
+  - pymdownx.snippets
+  - pymdownx.magiclink
+  - pymdownx.superfences
+  - pymdownx.inlinehilite
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+  - pymdownx.tabbed:
+      alternate_style: true 
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.arithmatex:
+      generic: true
+
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/TonyCrane/
+    - icon: fontawesome/solid/rss
+      link: https://blog.tonycrane.cc/
+    - icon: fontawesome/solid/home
+      link: https://tonycrane.cc/
+  analytics:
+    provider: custom
+    property: G-DYETCPM289
+
+extra_css:
+  - https://gcore.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css
+  - https://gcore.jsdelivr.net/npm/lxgw-wenkai-screen-webfont@1.1.0/style.css
+  - https://gcore.jsdelivr.net/npm/lxgw-wenkai-webfont@1.1.0/style.css
+  - css/tasklist.css
+  - css/custom.css
+  - css/card.css
+
+extra_javascript:
+  - https://gcore.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js
+  - js/katex.js
+  # js/scheme.js # this is in template 'base.html'
+
+plugins:
+  - rss
+  - search
+  - encryptcontent:  # now just for one page, need to be improved
+      title_prefix: "🔒 "
+      summary: '🔒 AAA School Bus Writeups'
+      placeholder: '在此输入密码     '
+      decryption_failure_message: '密码错误'
+      encryption_info_message: '请输入密码查看本篇文章（请联系我）'
+      remember_password: True 
+      default_expire_dalay: 48
+      encrypted_something:
+        mkdocs-encrypted-toc: [nav, class]
+  - git-revision-date-localized:
+      type: datetime
+      timezone: Asia/Shanghai
+      locale: zh
+      enable_creation_date: true
+
 nav:
   - Home:
     - index.md
