--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ copyright: Copyright &copy; 2022 <a href="https://github.com/timedegree"  target
 theme:
   name: 'material'
   language: 'zh'
+  favicon: /assets/android-chrome-192x192.png
   icon: 
     logo: material/notebook-outline
     admonition:
