--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -130,6 +130,7 @@ nav:
     - Mathematical Analysis:
       - math/maa/index.md
       - Universal Concept: math/maa/uc.md
+      - Real Number: math/maa/rn.md
     - Concrete Mathematics:
       - math/conm/index.md
   - CTF:
