--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -5,10 +5,10 @@
     - function: 新增友链功能
   - "2023-09-05":
     - newpage:
-        text: Mathematic > Mathematical Analysis > 新增 实数
+        text: Mathematic > Mathematical Analysis > 新增 Real Number
         href: /math/maa/rn/
     - pageupdate:
-        text: Mathematic > Mathematical Analysis > 通用概念 补全
+        text: Mathematic > Mathematical Analysis > Universal Concept 补全
         href: /math/maa/uc/
   - "2023-8-11":
     - pageupdate:
@@ -30,6 +30,8 @@
 
 - "2022":
   - "2022-11-12":
+    - newpage:
+        text: Mathematic > Mathematical Analysis > 新增 Universal Concept
     - refactor: Rust语法部分太乱,重新写了一下
   - "2022-08-26":
     - newpage:
