--- a/site/changelog.yml
+++ b/site/changelog.yml
@@ -1,4 +1,6 @@
 - "2023":
+  - "2023-09-25":
+    - function: 新增评论区功能
   - "2023-09-11":
     - newpage:
         text: Computer Science > 新增 WriteUp
