--- a/site/changelog.yml
+++ b/site/changelog.yml
@@ -1,4 +1,8 @@
 - "2023":
+  - "2023-10-13":
+    - newpage: 
+        text: Computer Science > Data Structure and Algorithm > 新增 Bit Operation
+        href: /cs/ald/bitcal
   - "2023-09-25":
     - function: 新增评论区功能
   - "2023-09-11":
@@ -6,12 +10,8 @@
         text: Computer Science > 新增 WriteUp
         href: /cs/wp/
     - newpage:
-        text: Computer Science > 新增 Database Structure
-        href: /cs/ds/
-  - "2023-09-10":
-    - newpage:
-        text: Computer Science > 新增 Algorithm
-        href: /cs/al/
+        text: Computer Science > 新增 Data Structure and Algorithm
+        href: /cs/ald/
   - "2023-09-09":
     - newpage:
         text: Mathematic > Concrete Mathematics > 新增 Recurrent Problem
