--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -1,4 +1,8 @@
 - "2023":
+  - "2023-10-21":
+    - newpage:
+        text: Computer Science > Data Structure and Algorithm > 新增 Recursion
+        href: /cs/ald/rnr
   - "2023-10-13":
     - newpage: 
         text: Computer Science > Data Structure and Algorithm > 新增 Bit Operation
