newpage prefix-sum and difference

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -137,6 +137,7 @@ nav:
       - cs/ald/index.md
       - Bit Operation: cs/ald/bitcal.md
       - Recursion: cs/ald/rnr.md
+      - Prefix Sum and Difference: cs/ald/pnd.md
   - Mathematic:
     - math/index.md
     - Mathematical Analysis:
