--- a/site/changelog.yml
+++ b/site/changelog.yml
@@ -1,4 +1,8 @@
 - "2023":
+  - "2023-10-28":
+    - newpage:
+        text: Computer Science > Data Structure and Algorithm > 新增 Prefix Sum and Difference
+        href: /cs/ald/pnd
   - "2023-10-21":
     - newpage:
         text: Computer Science > Data Structure and Algorithm > 新增 Recursion
