--- a/site/changelog.yml
+++ b/site/changelog.yml
@@ -1,8 +1,11 @@
 - "2024":
-  - "2024-3-10":
+  - "2024-3-17":
     - newpage:
         text: CTF > Knowledge > 新增 Defense
         href: /CTF/Knowledge/Defense
+    - newpage:
+        text: CTF > WriteUp > 新增 VenomCTF
+        href: /CTF/Knowledge/VCTF
   - "2024-3-16":
     - pageupdate:
         text: CTF > Knowledge > Stack Overflow > 新增 ret2csu
