--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -1,4 +1,8 @@
 - "2024":
+  - "2024-3-27":
+    - pageupdate:
+        text: CTF > Knowledge > Stack Overflow > 新增 ret2syscall
+        href: /CTF/Knowledge/Stack_Overflow
   - "2024-3-17":
     - newpage:
         text: CTF > Knowledge > 新增 Defense
