--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -1,8 +1,8 @@
 - "2024":
-  - "2024-3-30":
-    - newpage:
-        text: CTF > Knowledge > Stack Overflow > 新增 XYCTF Week1
-        href: /CTF/WriteUp/XYCTF-week1
+  # - "2024-3-30":
+  #   - newpage:
+  #       text: CTF > Knowledge > Stack Overflow > 新增 XYCTF Week1
+  #       href: /CTF/WriteUp/XYCTF-week1
   - "2024-3-30":
     - newpage:
         text: CTF > Knowledge > Stack Overflow > 新增 Format String
