--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -165,6 +165,7 @@ nav:
       - Stack Pivoting: CTF/Knowledge/Stack_Pivoting.md
       - Denfense: CTF/Knowledge/Defense.md
       - Format String: CTF/Knowledge/Format_String.md
+      - Set Questions: CTF/Knowledge/Docker.md
   #- Book List:
   #  - bkl/index.md
   #  - Literature: 
