--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ copyright: Copyright &copy; 2022-2024 <a href="https://github.com/timedegree"  t
 theme:
   name: 'material'
   language: 'zh'
-  favicon: /assets/favicon-warma.png
+  favicon: /assets/Hymmn0s.png
   icon: 
     logo: material/notebook-outline
     admonition:
@@ -71,8 +71,11 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.inlinehilite
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+      options:
+        custom_icons:
+          - overrides/.icons
   - pymdownx.tabbed:
       alternate_style: true 
   - pymdownx.tasklist:
