--- a/site/changelog.yml
+++ b/site/changelog.yml
@@ -1,4 +1,8 @@
 - "2024":
+  - "2024-12-15":
+    - newpage:
+        text: Mathematic > Probability Theory > 新增 Random Variable numerical characteristics
+        href: /math/proth/rvnc
   - "2024-12-14":
     - function: 大幅度修改页面样式，将 WriteUp 分离为单独页面
   - "2024-11-14":
