--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -172,6 +172,8 @@ nav:
       - Random Variable and Distribution: math/proth/rvd.md
       - Multivariate Random Variables and Distribution: math/proth/mrvd.md
       - Random Variable Numerical Characteristics: math/proth/rvnc.md
+      - Law of Large Numbers and Central Limit Theorem: math/proth/lln-clt.md
+      - Sample and Sampling Distribution: math/proth/ssd.md
   - CTF:
     - CTF/index.md
       #- MoeCTF: CTF/WriteUp/MoeCTF2023.md
