update light mode style color

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,17 +46,22 @@ theme:
     text: JetBrains Mono
     code: JetBrains Mono
   palette:
-    - media: "(prefers-color-scheme: dark)"
-      scheme: slate
+    - media: "(prefers-color-scheme)"
       toggle:
-        icon: material/brightness-4 
-        name: Switch to dark mode
-    
+        icon: material/brightness-auto
+        name: Switch to light mode
+
     - media: "(prefers-color-scheme: light)"
       scheme: default
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
+
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to system preference
 
 markdown_extensions:
   - toc:
