--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -1,4 +1,8 @@
 - "2025":
+  - "2025-12-15":
+    - newpage:
+        text: Miscellaneous > Languages > 新增 Japanese
+        href: /sd/jp
   - "2025-12-08":
     - function: 重新设计首页布局
   - "2025-01-05":
